--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "app-store-scraper": "^0.16.3",
     "async": "^3.2.0",
     "bcrypt": "^5.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
@@ -27,6 +28,8 @@
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.1",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1"
