--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "app-store-scraper": "0.16.3",
+    "app-store-scraper": "^0.16.3",
     "async": "^3.2.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cjs": "0.0.11",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "csv-parser": "^2.3.2",
     "debug": "~2.6.9",
+    "etag": "^1.8.1",
     "exceljs": "^3.8.1",
-    "express": "^4.16.4",
-    "firebase": "^8.1.2",
-    "firebase-admin": "^9.4.1",
+    "express": "^4.17.1",
+    "firebase": "^8.2.9",
+    "firebase-admin": "^9.5.0",
     "fs": "0.0.1-security",
     "google-play-scraper": "8.0.2",
     "helmet": "^4.4.1",
@@ -30,11 +32,12 @@
     "jade": "^1.11.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.1",
+    "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7"
   }
 }
